--- a/README.org
+++ b/README.org
@@ -74,6 +74,6 @@ happy to help you.
 I've got a great deal of inspiration from these projects. They might
 suit your needs better than dove. Each of them is pretty impressive!
 
-- =[[https://github.com/deercreeklabs/lancaster][lancaster]]= from [[https://github.com/chadharrington][Chad Harrington]]
-- =[[https://github.com/metosin/spec-tools][spec-tools]]= from [[https://github.com/ikitommi][Tommi Reiman]]
-- =[[https://github.com/stathissideris/spec-provider][spec-provider]]= from [[https://github.com/stathissideris][Stathis Sideris]]
+- [[https://github.com/deercreeklabs/lancaster][lancaster]] from [[https://github.com/chadharrington][Chad Harrington]]
+- [[https://github.com/metosin/spec-tools][spec-tools]] from [[https://github.com/ikitommi][Tommi Reiman]]
+- [[https://github.com/stathissideris/spec-provider][spec-provider]] from [[https://github.com/stathissideris][Stathis Sideris]]
